Project

General

Profile

Actions

Bug #21094

closed

Module#set_temporary_name does not affect a name of a nested module

Bug #21094: Module#set_temporary_name does not affect a name of a nested module

Added by andrykonchin (Andrew Konchin) over 1 year ago. Updated over 1 year ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:120808]

Description

Wondering whether it's intentional and correct behaviour:

m = Module.new
m::N = Module.new
p m::N.name # => "#<Module:0x000000010d0a00b0>::N"

m.set_temporary_name("foo")
p m::N.name # => "#<Module:0x000000010d0a00b0>::N"

I would expect that setting foo as a temporary name changes m::N.name to foo::N.

Updated by eileencodes (Eileen Uchitelle) over 1 year ago 1Actions #1 [ruby-core:120810]

This seems like a bug to me because if you set the temp name before creating N it works as you expected. Opened a PR https://github.com/ruby/ruby/pull/12658

Updated by nobu (Nobuyoshi Nakada) over 1 year ago Actions #2

  • Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: REQUIRED, 3.4: REQUIRED

Updated by nobu (Nobuyoshi Nakada) over 1 year ago Actions #3

  • Status changed from Open to Closed

Applied in changeset git|f69ad0e810e1fdc18dc12f77bbecfa49999ef3bf.


[Bug #21094] Update nested module names when setting temporary name

Updated by alanwu (Alan Wu) over 1 year ago Actions #4 [ruby-core:121461]

  • Backport changed from 3.1: DONTNEED, 3.2: DONTNEED, 3.3: REQUIRED, 3.4: REQUIRED to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: REQUIRED, 3.4: DONE

Updated by nagachika (Tomoyuki Chikanaga) over 1 year ago Actions #5 [ruby-core:121472]

  • Backport changed from 3.1: DONTNEED, 3.2: DONTNEED, 3.3: REQUIRED, 3.4: DONE to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONE, 3.4: DONE
Actions

Also available in: PDF Atom